--- a/service/nginx/nginx.conf
+++ b/service/nginx/nginx.conf
@@ -1,14 +1,12 @@
 user  nginx;
-worker_processes  1;
+worker_processes  10;
 
 error_log  /mnt/error.log warn;
 pid        /var/run/nginx.pid;
 
-
 events {
     worker_connections  1024;
 }
-
 
 http {
     include       /etc/nginx/mime.types;
@@ -24,17 +22,28 @@ http {
     #tcp_nopush     on;
 
     keepalive_timeout  65;
-
+        client_max_body_size 5120M;
     #gzip  on;
 
-  server {
-        listen 443;
-        server_name binya.tech;
-        ssl                  on;
-        ssl_certificate      /mnt/ssl/binya.tech/fullchain.pem;
-        ssl_certificate_key  /mnt/ssl/binya.tech/privkey.pem;
-        location /wc_chat/ {
-            proxy_pass    http://wc_chat/;
+	server {
+	    listen 80;
+		server_name nb.binya.tech;
+		return 301 https://$server_name$request_uri;
+	}
+        server {
+            #listen 80;
+			listen 443 ssl http2;
+			server_name nb.binya.tech;
+
+            ssl_certificate      /mnt/ssl/nb.binya.tech.pem;
+			ssl_certificate_key  /mnt/ssl/nb.binya.tech.key;
+            ssl_session_timeout 5m;
+            ssl_ciphers ECDHE-RSA-AES128-GCM-SHA256:ECDHE:ECDH:AES:HIGH:!NULL:!aNULL:!MD5:!ADH:!RC4;
+            ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+            ssl_prefer_server_ciphers on;
+
+        location / {
+            proxy_pass    http://notebook:80;
             proxy_redirect        off;
             proxy_set_header    Host    $http_host;
             proxy_set_header    X-Real-IP    $remote_addr;
@@ -42,60 +51,83 @@ http {
             proxy_set_header    X-Forwarded-Proto    $scheme;
         }
 
-		location /wc_period/ {
-            proxy_pass    http://wc_period/;
-            proxy_redirect        off;
-            proxy_set_header    Host    $http_host;
-            proxy_set_header    X-Real-IP    $remote_addr;
-            proxy_set_header    X-Forwarded-For    $proxy_add_x_forwarded_for;
-            proxy_set_header    X-Forwarded-Proto    $scheme;
-        }
-    }
+            location ~* /api/kernels/ {
+				proxy_pass    http://notebook:80;
+				proxy_set_header Host $host;
+                # websocket support
+                proxy_http_version    1.1;
+                proxy_set_header      Upgrade "websocket";
+                proxy_set_header      Connection "Upgrade";
+                proxy_read_timeout    86400;
+            }
+		}
+
 
 	server {
-        listen 443;
-        server_name iot.binya.tech;
-        ssl                  on;
-        ssl_certificate      /mnt/ssl/iot.binya.tech.pem;
-        ssl_certificate_key  /mnt/ssl/iot.binya.tech.key;
-        location / {
-            proxy_pass    http://mynodered:1880;
-            proxy_redirect        off;
-            proxy_set_header    Host    $http_host;
-            proxy_set_header    X-Real-IP    $remote_addr;
-            proxy_set_header    X-Forwarded-For    $proxy_add_x_forwarded_for;
-            proxy_set_header    X-Forwarded-Proto    $scheme;
+		listen 80;
+		listen 443 ssl;
+		server_name nc.binya.tech;
+		
+		access_log /var/log/nginx/cloud.example.com.access.log;
+		error_log /var/log/nginx/cloud.example.com.error.log;
+					
+		client_max_body_size 0;
+		underscores_in_headers on;
+					
+		ssl_certificate      /mnt/ssl/nc.binya.tech.pem;
+		ssl_certificate_key  /mnt/ssl/nc.binya.tech.key;
+										
+		ssl_stapling on;
+		ssl_stapling_verify on;
+												
+		location / {
+			#if ($scheme = http) {
+			#	return 301 https://$server_name$request_uri;
+			#}
+			proxy_headers_hash_max_size 512;
+			proxy_headers_hash_bucket_size 64;
+			proxy_set_header Host $host;
+			proxy_set_header X-Forwarded-Proto $scheme;
+			proxy_set_header X-Real-IP $remote_addr;
+			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+																										
+			add_header Front-End-Https on;
+			proxy_pass    http://nextcloud;
+		}
+	}
+	
+	
+	server {
+	    listen 80;
+		listen 443 ssl http2;
+		server_name iot.binya.tech;
+		ssl_certificate      /mnt/ssl/iot.binya.tech.pem;
+		ssl_certificate_key  /mnt/ssl/iot.binya.tech.key;
+		ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+		ssl_ciphers EECDH+AES128:RSA+AES128:EECDH+AES256:RSA+AES256:EECDH+3DES:RSA+3DES:!MD5;
+		ssl_prefer_server_ciphers On;
+		ssl_session_cache shared:SSL:128m;
+		ssl_stapling on;
+		ssl_stapling_verify on;
+		#resolver 8.8.8.8;
+			
+		location / {
+			if ($scheme = http) {
+				return 301 https://$server_name$request_uri;
+			}
+			proxy_pass    http://nodered:1880;
+			proxy_set_header Host $host;
+			proxy_set_header X-Real-IP $remote_addr;
 			proxy_http_version 1.1;
 			proxy_set_header Upgrade $http_upgrade;
 			proxy_set_header Connection "upgrade";
 		}
-  }
-
-	server {
-        listen 443;
-        server_name nb.binya.tech;
-        ssl                  on;
-        ssl_certificate      /mnt/ssl/nb.binya.tech.pem;
-        ssl_certificate_key  /mnt/ssl/nb.binya.tech.key;
-        location / {
-            proxy_pass    http://notebook:8844/;
-            proxy_redirect        off;
-            proxy_set_header    Host    $http_host;
-            proxy_set_header    X-Real-IP    $remote_addr;
-            proxy_set_header    X-Forwarded-For    $proxy_add_x_forwarded_for;
-            proxy_set_header    X-Forwarded-Proto    $scheme;
-        }
-
-		location ~* /api/kernels/ {
-            proxy_pass    http://notebook:8844;
-            proxy_set_header Host $host;
-			# websocket support
-			proxy_http_version    1.1;
-			proxy_set_header      Upgrade "websocket";
-			proxy_set_header      Connection "Upgrade";
-			proxy_read_timeout    86400;
+															
+		location '/.well-known/acme-challenge' {
+			root /var/www/html;
 		}
-  }
+	}
 
-    include /etc/nginx/conf.d/*.conf;
+
+	#include /etc/nginx/conf.d/*.conf;
 }
