--- a/service/nginx/nginx.conf
+++ b/service/nginx/nginx.conf
@@ -43,7 +43,7 @@ http {
             ssl_prefer_server_ciphers on;
 
         location / {
-            proxy_pass    http://notebook:80;
+            proxy_pass    http://jupyterlab:80;
             proxy_redirect        off;
             proxy_set_header    Host    $http_host;
             proxy_set_header    X-Real-IP    $remote_addr;
@@ -52,7 +52,7 @@ http {
         }
 
             location ~* /api/kernels/ {
-				proxy_pass    http://notebook:80;
+				proxy_pass    http://jupyterlab:80;
 				proxy_set_header Host $host;
                 # websocket support
                 proxy_http_version    1.1;
