--- a/service/nginx/nginx.conf
+++ b/service/nginx/nginx.conf
@@ -25,22 +25,30 @@ http {
         client_max_body_size 5120M;
     #gzip  on;
 
+	server{
+		listen *:80 default_server;
+		
+		server_name _;
+			
+		return 444;
+		}
+						
 	server {
 	    listen 80;
 		server_name nb.binya.tech;
 		return 301 https://$server_name$request_uri;
 	}
-        server {
-            #listen 80;
-			listen 443 ssl http2;
-			server_name nb.binya.tech;
+	server {
+		#listen 80;
+		listen 443 ssl http2;
+		server_name nb.binya.tech;
 
-            ssl_certificate      /mnt/ssl/nb.binya.tech.pem;
-			ssl_certificate_key  /mnt/ssl/nb.binya.tech.key;
-            ssl_session_timeout 5m;
-            ssl_ciphers ECDHE-RSA-AES128-GCM-SHA256:ECDHE:ECDH:AES:HIGH:!NULL:!aNULL:!MD5:!ADH:!RC4;
-            ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
-            ssl_prefer_server_ciphers on;
+		ssl_certificate      /mnt/ssl/nb.binya.tech.pem;
+		ssl_certificate_key  /mnt/ssl/nb.binya.tech.key;
+		ssl_session_timeout 5m;
+		ssl_ciphers ECDHE-RSA-AES128-GCM-SHA256:ECDHE:ECDH:AES:HIGH:!NULL:!aNULL:!MD5:!ADH:!RC4;
+		ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+		ssl_prefer_server_ciphers on;
 
         location / {
             proxy_pass    http://jupyterlab:80;
@@ -51,16 +59,16 @@ http {
             proxy_set_header    X-Forwarded-Proto    $scheme;
         }
 
-            location ~* /api/kernels/ {
-				proxy_pass    http://jupyterlab:80;
-				proxy_set_header Host $host;
-                # websocket support
-                proxy_http_version    1.1;
-                proxy_set_header      Upgrade "websocket";
-                proxy_set_header      Connection "Upgrade";
-                proxy_read_timeout    86400;
-            }
+		location ~* /api/kernels/ {
+			proxy_pass    http://jupyterlab:80;
+			proxy_set_header Host $host;
+			# websocket support
+			proxy_http_version    1.1;
+			proxy_set_header      Upgrade "websocket";
+			proxy_set_header      Connection "Upgrade";
+			proxy_read_timeout    86400;
 		}
+	}
 
 
 	server {
