--- a/service/nginx/nginx.conf
+++ b/service/nginx/nginx.conf
@@ -73,18 +73,32 @@ http {
 
 	server {
 		listen 80;
-		listen 443 ssl;
+		listen 443 ssl http2;
+		listen [::]:443 ssl http2;
 		server_name nc.binya.tech;
 		
-		access_log /var/log/nginx/cloud.example.com.access.log;
-		error_log /var/log/nginx/cloud.example.com.error.log;
-					
-		client_max_body_size 0;
-		underscores_in_headers on;
-					
 		ssl_certificate      /mnt/ssl/nc.binya.tech.pem;
 		ssl_certificate_key  /mnt/ssl/nc.binya.tech.key;
-										
+
+		add_header X-Content-Type-Options nosniff;
+		add_header X-XSS-Protection "1; mode=block";
+		add_header X-Robots-Tag none;
+		add_header X-Download-Options noopen;
+		add_header X-Permitted-Cross-Domain-Policies none;
+		add_header Referrer-Policy no-referrer;
+
+		fastcgi_hide_header X-Powered-By;
+
+		client_max_body_size 5120M;
+		fastcgi_buffers 64 4K;
+
+		gzip on;
+		gzip_vary on;
+		gzip_comp_level 4;
+		gzip_min_length 256;
+		gzip_proxied expired no-cache no-store private no_last_modified no_etag auth;
+		gzip_types application/atom+xml application/javascript application/json application/ld+json application/manifest+json application/rss+xml application/vnd.geo+json application/vnd.ms-fontobject application/x-font-ttf application/x-web-app-manifest+json application/xhtml+xml application/xml font/opentype image/bmp image/svg+xml image/x-icon text/cache-manifest text/css text/plain text/vcard text/vnd.rim.location.xloc text/vtt text/x-component text/x-cross-domain-policy;
+
 		ssl_stapling on;
 		ssl_stapling_verify on;
 												
@@ -114,7 +128,7 @@ http {
 		ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
 		ssl_ciphers EECDH+AES128:RSA+AES128:EECDH+AES256:RSA+AES256:EECDH+3DES:RSA+3DES:!MD5;
 		ssl_prefer_server_ciphers On;
-		ssl_session_cache shared:SSL:128m;
+		ssl_session_cache shared:SSL:10m;
 		ssl_stapling on;
 		ssl_stapling_verify on;
 		#resolver 8.8.8.8;
@@ -136,6 +150,36 @@ http {
 		}
 	}
 
+
+	server {
+		server_name ha.binya.tech;
+		ssl_certificate      /mnt/ssl/ha.binya.tech.pem;	#fullchain.pem
+		ssl_certificate_key  /mnt/ssl/ha.binya.tech.key;	#privkey.pem
+
+		# Ensure this line points to your dhparams file
+		# ssl_dhparam /etc/nginx/ssl/dhparams.pem;
+
+		# These shouldn't need to be changed
+		listen 443 ssl http2 default_server ipv6only=off; # if your nginx version is >= 1.9.5 you can also add the "http2" flag here
+		add_header Strict-Transport-Security "max-age=31536000; includeSubdomains";
+		# ssl on; # Uncomment if you are using nginx < 1.15.0
+		ssl_protocols TLSv1.2;
+		ssl_ciphers "EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH:!aNULL:!eNULL:!EXPORT:!DES:!MD5:!PSK:!RC4";
+		ssl_prefer_server_ciphers on;
+		ssl_session_cache shared:SSL:10m;
+
+		proxy_buffering off;
+
+		location / {
+			proxy_pass http://ha:8123;
+			proxy_set_header Host $host;
+			proxy_redirect http:// https://;
+			proxy_http_version 1.1;
+			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+			proxy_set_header Upgrade $http_upgrade;
+			proxy_set_header Connection "upgrade";
+		}
+	}
 
 	#include /etc/nginx/conf.d/*.conf;
 }
